--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="title_github">Github</string>
     <string name="title_share">Share</string>
 
+    <string name="confirm_clear_playlist">Clear Playlist?</string>
+    <string name="button_label_confirm_clear_playlist">Clear</string>
 
 
 </resources>
