--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
 
     <string name="confirm_clear_playlist">Clear Playlist?</string>
     <string name="button_label_confirm_clear_playlist">Clear</string>
+    
+    <string name="button_label_try_agein">Try Again</string>
 
 
 </resources>
